--- a/docs/layouts/partials/header.html
+++ b/docs/layouts/partials/header.html
@@ -26,7 +26,7 @@
         <hr class="d-lg-none my-2 text-white-50">
       </li>
       <li class="nav-item dropdown">
-        <button class="btn btn-link nav-link py-2 px-2 px-lg-2 dropdown-toggle d-flex align-items-center"
+        <button class="btn btn-link nav-link py-2 px-2 px-lg-2 d-flex align-items-center"
                 type="button"
                 aria-expanded="false"
                 data-coreui-toggle="dropdown"
@@ -56,6 +56,10 @@
             </button>
           </li>
         </ul>
+      </li>
+      <li class="nav-item py-2 py-lg-1">
+        <div class="vr d-none d-lg-flex h-100 mx-lg-2 text-body text-opacity-75"></div>
+        <hr class="d-lg-none my-2 text-white-50">
       </li>
     </ul>
     <a class="btn btn-outline-primary d-lg-inline-block my-2 my-md-0 ms-md-3" href="/getting-started/download/">
