--- a/scss/_time-picker.scss
+++ b/scss/_time-picker.scss
@@ -236,13 +236,16 @@
 .time-picker-roll-col {
   height: calc(8 * 32px); // stylelint-disable-line
   overflow: scroll;
-  border-right: var(--#{$prefix}time-picker-roll-col-border-width) solid var(--#{$prefix}time-picker-roll-col-border-color);
 
   -ms-overflow-style: none;  /* Internet Explorer 10+ */
   scrollbar-width: none;  /* Firefox */
 
   &::-webkit-scrollbar {
     display: none;  /* Safari and Chrome */
+  }
+
+  &:not(:last-child) {
+    border-right: var(--#{$prefix}time-picker-roll-col-border-width) solid var(--#{$prefix}time-picker-roll-col-border-color);
   }
 }
 
