--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2330,6 +2330,8 @@ $calendar-cell-range-hover-bg:               rgba(var(--#{$prefix}primary-rgb), 
 $calendar-cell-range-hover-border-color:     var(--#{$prefix}primary) !default;
 
 $calendar-cell-today-color:                  var(--#{$prefix}$danger) !default;
+
+$calendar-cell-week-number-color:            var(--#{$prefix}tertiary-color) !default;
 // scss-docs-end calendar-variables
 
 // Date Picker
